deploy/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f compose.resolved.yaml convert -v
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f compose.resolved.yaml convert -v
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/aurora: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: API_PASSWORD
              value: 
            - name: API_USER
              value: 
            - name: FLYWAY_PASSWORD
              value: 
            - name: FLYWAY_USER
              value: 
            - name: MYSQL_DATABASE
              value: aurora
            - name: MYSQL_ROOT_PASSWORD
              value: 
          image: aurora-stats-db
          name: db
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-claim0
      restartPolicy: Always
      volumes:
        - name: db-claim0
          persistentVolumeClaim:
            claimName: db-claim0
status: {}
