deploy/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f compose.resolved.yaml convert -v
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: website
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: website
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f compose.resolved.yaml convert -v
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/aurora: "true"
        io.kompose.service: website
    spec:
      containers:
        - env:
            - name: REACT_APP_API
              value: localhost
            - name: REACT_APP_API_PORT
              value: "8080"
          image: aurora-stats-website
          name: website
          ports:
            - containerPort: 3000
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}
